--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,9 +9,10 @@
     </head>
     <body>
         <div>
-            Microblog:
-            <a href="{{ url_for('dashboard') }}">Home</a>
-            <a href="{{ url_for('login') }}">Login</a>
+            Forum des métiers:
+            <a href="{{ url_for('dashboard') }}">Acceuil</a>
+            <a href="{{ url_for('login') }}">Connexion</a>
+            <a href="{{ url_for('logout') }}">Déconnexion</a>
         </div>
         <hr>
         {% block content %}{% endblock %}
