summary + user cration

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             Forum des métiers:
-            <a href="{{ url_for('dashboard') }}">Acceuil</a>
+            <a href="{{ url_for('dashboard') }}">Accueil</a>
             <a href="{{ url_for('login') }}">Connexion</a>
             <a href="{{ url_for('logout') }}">Déconnexion</a>
         </div>
