--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -5,7 +5,7 @@
 <h2>Actions</h2>
 <ul>
     <li><a href="{{ url_for('jobsCreation') }}">Ajouter un métier</a> </li>
-    <li><a href="{{ url_for('dashboard') }}">Créer un utilisateur manuelement (non implémanté) </a> </li>
+    <li><a href="{{ url_for('registerUser') }}">Créer un utilisateur manuelement</a> </li>
     <li><a href="{{ url_for('dashboard') }}">Importer une liste d'élèves (non implémanté) </a> </li>
     <li><a href="{{ url_for('dashboard') }}">Changer le mot de passe d'un élève (non implémanté) </a> </li>
     <li> <a href="{{ url_for('dashboard') }}">Changer les voeux d'un élève (non implémanté) </a> </li>
@@ -16,5 +16,7 @@
 Nombres de métier: {{ jobsNb }} <br>
 Nombre d'élève inscrit: {{ nbStudent }} <br>
 Nombre d'élève ayant fait leurs voeux : {{ nbWish }} ( {{ (nbWish*100)//nbStudent }} %) <br>
+
+<a href="{{ url_for('summary') }}">Résumé global</a>
 
 {% endblock %}
