--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,20 +1,37 @@
 <!doctype html>
 <html>
-    <head>
-      {% if title %}
-      <title>{{ title }} - Forum des métiers</title>
-      {% else %}
-      <title>Forum des métiers</title>
-      {% endif %}
-    </head>
-    <body>
-        <div>
-            Forum des métiers:
-            <a href="{{ url_for('dashboard') }}">Accueil</a>
-            <a href="{{ url_for('login') }}">Connexion</a>
-            <a href="{{ url_for('logout') }}">Déconnexion</a>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Forum des métiers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Forum des métiers</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item me-2">
+                <a href="{{ url_for('dashboard') }}">Accueil</a>
+              </li>
+              <li class="nav-item me-2">
+                <a href="{{ url_for('login') }}">Connexion</a>
+              </li>
+              <li class="nav-item me-2">
+                <a href="{{ url_for('logout') }}">Déconnexion</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <hr>
-        {% block content %}{% endblock %}
-    </body>
+      </nav>
+
+    {% block content %}{% endblock %}
+</body>
+
 </html>
