--- a/app/templates/jobsCreate.html
+++ b/app/templates/jobsCreate.html
@@ -1,16 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Ajout de métier</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.jobsName.label }}<br>
-            {{ form.jobsName(size=64) }}<br>
-            {% for error in form.jobsName.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+    <div class="container mt-5">
+        <h1 class="mb-4">Ajout de métier</h1>
+        <form action="" method="post" novalidate>
+            {{ form.hidden_tag() }}
+            
+            <div class="mb-3">
+                <label for="jobsName" class="form-label">{{ form.jobsName.label }}</label>
+                {{ form.jobsName(class="form-control", id="jobsName", size=64) }}
+                {% for error in form.jobsName.errors %}
+                    <div class="text-danger mt-1">[{{ error }}]</div>
+                {% endfor %}
+            </div>
+            
+            <div class="d-grid">
+                {{ form.submit(class="btn btn-primary btn-lg") }}
+            </div>
+        </form>
+    </div>
 {% endblock %}
