--- a/app/templates/jobsSelection.html
+++ b/app/templates/jobsSelection.html
@@ -1,28 +1,34 @@
 {% extends "base.html" %}
 
 {% macro render_field(field) %}
-<div>
-    <label for="{{ field.id }}">{{ field.label.text }}</label>
-    {{ field(class="form-control") }}
+<div class="mb-3">
+    <label for="{{ field.id }}" class="form-label">{{ field.label.text }}</label>
+    {{ field(class="form-control", id=field.id) }}
 </div>
 {% endmacro %}
 
 {% block content %}
-<h1>Sélection des métiers</h1>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    {{ render_field(form.first) }}
-    {{ render_field(form.second) }}
-    {{ render_field(form.third) }}
-    {{ render_field(form.fourth) }}
-    {{ render_field(form.fifth) }}
+<div class="container mt-5">
+    <h1 class="mb-4">Sélection des métiers</h1>
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
 
-    {% for error in form.first.errors %}
-    <span style="color: red;">{{ error }}</span>
-    {% endfor %}
+        <!-- Champs du formulaire -->
+        {{ render_field(form.first) }}
+        {{ render_field(form.second) }}
+        {{ render_field(form.third) }}
+        {{ render_field(form.fourth) }}
+        {{ render_field(form.fifth) }}
 
-    <div>
-        {{ form.submit(class="btn btn-primary") }}
-    </div>
-</form>
+        <!-- Gestion des erreurs pour le champ 'first' -->
+        {% for error in form.first.errors %}
+        <div class="text-danger mb-3">{{ error }}</div>
+        {% endfor %}
+
+        <!-- Bouton de soumission -->
+        <div class="d-grid">
+            {{ form.submit(class="btn btn-primary btn-lg") }}
+        </div>
+    </form>
+</div>
 {% endblock %}
