--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,24 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Sign In</h1>
+<div class="container mt-5">
+    <h1 class="mb-4">Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
+
+        <div class="mb-3">
+            <label for="{{ form.username.id }}" class="form-label">{{ form.username.label }}</label>
+            {{ form.username(class="form-control", id=form.username.id, size=32) }}
             {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+                <div class="text-danger">{{ error }}</div>
             {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
+        </div>
+
+        <div class="mb-3">
+            <label for="{{ form.password.id }}" class="form-label">{{ form.password.label }}</label>
+            {{ form.password(class="form-control", id=form.password.id, size=32) }}
             {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+                <div class="text-danger">{{ error }}</div>
             {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+        </div>
+
+        <div class="form-check mb-3">
+            {{ form.remember_me(class="form-check-input", id=form.remember_me.id) }}
+            <label class="form-check-label" for="{{ form.remember_me.id }}">{{ form.remember_me.label }}</label>
+        </div>
+
+        <div>
+            {{ form.submit(class="btn btn-primary btn-lg") }}
+        </div>
     </form>
+</div>
 {% endblock %}
