--- a/app/templates/registerUser.html
+++ b/app/templates/registerUser.html
@@ -1,28 +1,30 @@
 {% extends "base.html" %}
 
 {% macro render_field(field) %}
-<div>
-    <label for="{{ field.id }}">{{ field.label.text }}</label>
-    {{ field(class="form-control") }}
+<div class="mb-3">
+    <label for="{{ field.id }}" class="form-label">{{ field.label.text }}</label>
+    {{ field(class="form-control", id=field.id) }}
     {% for error in field.errors %}
-        <span class="text-danger">{{ error }}</span>
+        <div class="text-danger mt-1">{{ error }}</div>
     {% endfor %}
 </div>
 {% endmacro %}
 
 {% block content %}
+<div class="container mt-5">
+    <h1 class="mb-4">Formulaire d'Inscription</h1>
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        
+        <!-- Champs du formulaire -->
+        {{ render_field(form.username) }}
+        {{ render_field(form.password) }}
+        {{ render_field(form.rightLevel) }}
 
-<h1>Formulaire d'Inscription</h1>
-        <form method="POST">
-            {{ form.hidden_tag() }}
-            
-            {{ render_field(form.username) }}
-            {{ render_field(form.password) }}
-            {{ render_field(form.rightLevel) }}
-
-            <div class="mt-3">
-                {{ form.submit(class="btn btn-primary") }}
-            </div>
-        </form>
-
+        <!-- Bouton de soumission -->
+        <div class="mt-3">
+            {{ form.submit(class="btn btn-primary btn-lg") }}
+        </div>
+    </form>
+</div>
 {% endblock %}
