--- a/app/templates/summary.html
+++ b/app/templates/summary.html
@@ -9,11 +9,13 @@
         <thead class="thead-light">
             <tr>
                 <th scope="col">Élève</th>
+                <th scope="col">Classe </th>
                 <th scope="col">Voeux 1</th>
                 <th scope="col">Voeux 2</th>
                 <th scope="col">Voeux 3</th>
                 <th scope="col">Voeux 4</th>
                 <th scope="col">Voeux 5</th>
+                
             </tr>
         </thead>
         <tbody>
@@ -25,6 +27,7 @@
                 <td>{{ l[3] }}</td>
                 <td>{{ l[4] }}</td>
                 <td>{{ l[5] }}</td>
+                <td>{{ l[6] }}</td>
             </tr>
             {% endfor %}
         </tbody>
