--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,19 +11,23 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
+          {% if user is defined %}
+          <a class="navbar-brand" href="#">Forum des métiers ({{ user.displayName }})</a>
+          {% else %}
           <a class="navbar-brand" href="#">Forum des métiers</a>
+          {% endif %}
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="navbar-collapse collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item me-2">
                 <a href="{{ url_for('dashboard') }}">Accueil</a>
               </li>
               <li class="nav-item me-2">
                 <a href="{{ url_for('login') }}">Connexion</a>
               </li>
-              <li class="nav-item me-2">
+              <li class="nav-item ">
                 <a href="{{ url_for('logout') }}">Déconnexion</a>
               </li>
             </ul>
