--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -13,7 +13,7 @@
             <a href="{{ url_for('registerUser') }}" class="btn btn-link">Créer un utilisateur manuellement</a>
         </li>
         <li class="list-group-item">
-            <a href="{{ url_for('dashboard') }}" class="btn btn-link">Importer une liste d'élèves (non implémenté)</a>
+            <a href="{{ url_for('batchRegister') }}" class="btn btn-link">Importer une liste d'élèves</a>
         </li>
         <li class="list-group-item">
             <a href="{{ url_for('dashboard') }}" class="btn btn-link">Changer le mot de passe d'un élève (non implémenté)</a>
