add summary by group

--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -43,6 +43,7 @@
     {% endif %}
     <div class="mt-4">
         <a href="{{ url_for('summary') }}" class="btn btn-primary">Résumé global</a>
+        <a href="{{ url_for('classeSummary') }}" class="btn btn-primary">Résumé par classe</a>
     </div>
 </div>
 {% endblock %}
