--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Forum des métiers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,22 +17,26 @@
           {% else %}
           <a class="navbar-brand" href="#">Forum des métiers</a>
           {% endif %}
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="navbar-collapse collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item me-2">
-                <a href="{{ url_for('dashboard') }}">Accueil</a>
+                <a class="nav-link" href="{{ url_for('dashboard') }}">Accueil</a>
               </li>
               <li class="nav-item me-2">
-                <a href="{{ url_for('login') }}">Connexion</a>
+                <a class="nav-link" href="{{ url_for('jobs') }}">List des métiers</a>
+              </li>
+              <li class="nav-item me-2">
+                <a class="nav-link" href="{{ url_for('login') }}">Connexion</a>
               </li>
               <li class="nav-item ">
-                <a href="{{ url_for('logout') }}">Déconnexion</a>
+                <a class="nav-link" href="{{ url_for('logout') }}">Déconnexion</a>
               </li>
             </ul>
           </div>
+          
         </div>
       </nav>
 
