Fix oatographe templates

--- a/app/templates/repart.html
+++ b/app/templates/repart.html
@@ -14,7 +14,7 @@
 <div class="container mt-4">
     <h1 class="mb-4">Répartition</h1>
     <div class="alert alert-danger" role="alert">
-        Cette fonctionnalité est expérimentale et pas beaucoup tester, veuillez vérifier les résultats avant de les utiliser !
+        Cette fonctionnalité est expérimentale et beaucoup testée, veuillez vérifier les résultats avant de les utiliser !
     </div>
     <!-- Ton contenu ici -->
     <form method="POST">
