--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -55,7 +55,7 @@
     </div>
     {% else %}
     <div class="list-group">
-        Auccun élève enregistré
+        Aucun élève enregistré
     </div>
     {% endif %}
     
