--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="{{ url_for('dashboard') }}">Accueil</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link" href="{{ url_for('jobs') }}">List des métiers</a>
+                <a class="nav-link" href="{{ url_for('jobs') }}">Liste des métiers</a>
               </li>
               <li class="nav-item me-2">
                 <a class="nav-link" href="{{ url_for('login') }}">Connexion</a>
