--- a/app/templates/summary.html
+++ b/app/templates/summary.html
@@ -34,7 +34,7 @@
     </table>
     {% else %}
     <div class="alert alert-danger">
-        Une erreur s'est produite.
+        Une erreur c'est produite.
     </div>
     {% endif %}
 </div>
