Update dashboard + copyright

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,6 +41,10 @@
       </nav>
 
     {% block content %}{% endblock %}
+
+    <footer class="bg-dark text-white text-center p-3 mt-4">
+        <p>Forum des métiers, Collège Léo DROUYN 2025-2026</p>
+    </footer>
 </body>
 
 </html>
