--- a/app/templates/repart.html
+++ b/app/templates/repart.html
@@ -20,8 +20,11 @@
     <form method="POST">
         {{ form.hidden_tag() }}
         {{ render_field(form.slot1) }}
+        {{ render_field(form.nbStudentSlot1) }}
         {{ render_field(form.slot2) }}
+        {{ render_field(form.nbStudentSlot2) }}
         {{ render_field(form.slot3) }}
+        {{ render_field(form.nbStudentSlot3) }}
         <button type="submit" class="btn btn-primary">Enregistrer</button>
     </form>
 </div>
