Add ability to split section

--- a/app/templates/section_selection.html
+++ b/app/templates/section_selection.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="mb-4">Résumé pour la classe</h1>
+    <h1 class="mb-4">Sélectioner la classe</h1>
     <form method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         
