--- a/app/templates/registerUser.html
+++ b/app/templates/registerUser.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% macro render_field(field) %}
+
 <div class="mb-3">
     <label for="{{ field.id }}" class="form-label">{{ field.label.text }}</label>
     {{ field(class="form-control", id=field.id) }}
@@ -12,14 +13,16 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="mb-4">Formulaire d'Inscription</h1>
+    <h1 class="mb-4">{{ title }}</h1>
     <form method="POST">
         {{ form.hidden_tag() }}
         
         <!-- Champs du formulaire -->
         {{ render_field(form.displayName) }}
         {{ render_field(form.username) }}
+        {% if form.password.label is defined %}
         {{ render_field(form.password) }}
+        {% endif %}
         {{ render_field(form.classe) }}
         {{ render_field(form.rightLevel) }}
 
