--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -19,6 +19,9 @@
             <a href="{{ url_for('repart') }}" class="btn btn-link">Générer une répartition (EXPERIMENTAL!)</a>
         </li>
         <li class="list-group-item">
+            <a href="{{ url_for('editUser') }}" class="btn btn-link">Modifier un élève</a>
+        </li>
+        <li class="list-group-item">
             <a href="{{ url_for('dashboard') }}" class="btn btn-link">Changer les voeux d'un élève (non implémenté)</a>
         </li>
     </ul>
