UI: fix broken link in teatcher dashboard

--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -22,7 +22,7 @@
             <a href="{{ url_for('editUser') }}" class="btn btn-link">Modifier un élève</a>
         </li>
         <li class="list-group-item">
-            <a href="{{ url_for('dashboard') }}" class="btn btn-link">Changer les voeux d'un élève (non implémenté)</a>
+            <a href="{{ url_for('editWhish') }}" class="btn btn-link">Changer les voeux d'un élève</a>
         </li>
     </ul>
 
