--- a/app/templates/teatcherDashBoard.html
+++ b/app/templates/teatcherDashBoard.html
@@ -24,6 +24,9 @@
         <li class="list-group-item">
             <a href="{{ url_for('editWhish') }}" class="btn btn-link">Changer les voeux d'un élève</a>
         </li>
+        <li class="list-group-item">
+            <a href="{{ url_for('splitSectionStep1') }}" class="btn btn-link">Séparer une classe en deux</a>
+        </li>
     </ul>
 
     <h2 class="mt-5">Status</h2>
